data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1428.wast
;; 9. **Test Description**:     Define a `loop` with multiple iterations and include a `br_if` to exit the loop under a certain condition. Ensure that the stack state is maintained across multiple loop exits.    - **Constraint Checked**: Loop exit conditions and stack restoration.    - **Stack Corruption Check**: Ensures stack integrity on non-trivial loop exits.

(assert_invalid
  (module
    (func $loop-with-br_if-stack (result i32)
      (loop (result i32)
        (i32.const 0) (i32.const 1)
        (br_if 1 (i32.const 1))
      )
      (i32.add)
    )
  )
  "type mismatch"
)